# Computer-Graphics-1-Excersises-TUDresden-Masters

./: .gitignore  CG1_EX1_Theory_Soln.docx  CMakeLists.txt  README.md
CMake/Modules/: CG1Helper.cmake
common/: CMakeLists.txt
common/glsl/: mesh.frag
exercise1/: CMakeLists.txt
exercise1/glsl/: shader.frag  shader.vert
exercise1/include/: Smoothing.h  Viewer.h
exercise1/src/: ShellExtraction.cpp  Smoothing.cpp  Stripification.cpp  SurfaceArea.cpp  Viewer.cpp  Volume.cpp
exercise1_2/: CMakeLists.txt
exercise1_2/include/: Valence.h  Viewer.h
exercise1_2/src/: Primitives.cpp  ShellExtraction.cpp  Smoothing.cpp  Stripification.cpp  SurfaceArea.cpp  Valence.cpp  Viewer.cpp  Volume.cpp
exercise2/: CMakeLists.txt
exercise2/glsl/: shader.frag  shader.vert  terrain.frag  terrain.vert
exercise2/src/: Viewer.cpp
exercise3/: CMakeLists.txt
exercise3/glsl/: shader.frag  shader.vert  terrain.frag  terrain.vert
exercise3/src/: Viewer.cpp
exercise4/: CMakeLists.txt
exercise4/glsl/: sky.frag  sky.vert  terrain.frag  terrain.vert
exercise4/src/: GridTraverser.cpp  Triangle.cpp  Viewer.cpp
exercise5/: CMakeLists.txt
exercise5/include/: AABBTree.h  GridTraverser.h
exercise5/src/: GridTraverser.cpp  LineSegment.cpp  Parametrization.cpp  Registration.cpp  Triangle.cpp  Viewer.cpp
solution/linux/: Exercise1  Exercise1_2  Exercise3  Exercise4  Exercise5
solution/mac/: Exercise1_2  Exercise3  Exercise5
